app/client/stylesheets/slider.import.less
/*
 * Slider
 */
.at-nouislider {
  transition: border @transition-duration-dim;
  
  .nouislider-container {
    padding: 1vh 0;
    
    -webkit-display: flex;
    -ms-display: flex;
    display: flex;
    
    -webkit-align-items: center;
    align-items: center;
    
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }
  
  .nouislider-label {
    -webkit-flex: 0 0 4.5em;
    -ms-flex: 0 0 4.5em;
    flex: 0 0 4.5em;
    
    margin: auto;
    
    color: black;
    
    &:last-child {
      text-align: right;
    }
  }
  
  .nouislider {
    -webkit-flex: 1 0 auto;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
    margin: 0 3vm;
    margin: 0 3vmin;
    
    cursor: pointer;
  }
  
  .noUi-target {
    background: black;
    border-radius: 0;
    border: 0;
    box-shadow: none;
  }
  
  .noUi-horizontal {
    height: 2px;
    
    @media only screen and (min-width: @screen-sm-min) {
      height: 4px;
    }
  }
  
  .noUi-handle {
    width: 40px;
    height: 40px;
    left: -19px;
    top: -19px;
    
    background: black;
    border: 0;
    border-radius: 50%;
    box-shadow: none;
    
    transition: transform 0.1s;
    cursor: pointer;
    
    &:hover {
      background: #444;
    }
    
    &:before,
    &:after {
      content: none;
    }
    
    @media only screen and (min-width: @screen-sm-min) {
      width: 5vh;
      height: 5vh;
      left: -2.35vh;
      top: -2.35vh;
    }
  }
  
  .noUi-active {
    background: black !important;
    transform: scale(0.95);
  }
}

@media only screen and (max-width: @screen-sm-min) {
  .dim .at-nouislider {
    opacity: 1 !important;
    border-top-color: transparent;
  }  
}

